--- a/components/site/app/views/layouts/site/_footer.html.haml
+++ b/components/site/app/views/layouts/site/_footer.html.haml
@@ -21,6 +21,7 @@
                 = link_to_code('trabalhe_conosco')
                 = link_to_code('quem_somos')
                 = link_to_code('faqs')
+        .col-md-1
         .col-xs-12.col-sm-6.col-md-3.footer-nav-col
           .ft-contact-info
             %h4.ft-col-title Anuncie
