--- a/components/site/app/assets/stylesheets/site/application.css
+++ b/components/site/app/assets/stylesheets/site/application.css
@@ -9,5 +9,6 @@
  *= require site/home
  *= require site/citilights-shortcode
  *= require site/color-custom
+ *= require site/bxslider
  *= require site/custom
  */
