--- a/components/site/app/views/site/external_users/_form.html.haml
+++ b/components/site/app/views/site/external_users/_form.html.haml
@@ -17,3 +17,4 @@
   .row
     .col-md-12
       = f.submit "Realizar meu cadastro", class: 'btn btn-primary'
+      = link_to "Eu já possuo cadastro", new_session_path, class: 'btn btn-inverse', remote: true
