--- a/components/site/app/views/site/external_users/_new.html.haml
+++ b/components/site/app/views/site/external_users/_new.html.haml
@@ -9,9 +9,9 @@
 
   .row
     .col-md-6{style: 'text-align: center'}
-      = link_to "<i class='fa fa-facebook'></i> | Acessar usando o facebook".html_safe, '/auth/facebook', class: 'btn btn-facebook'
+      = link_to "<i class='fa fa-facebook'></i> | Cadastrar usando o facebook".html_safe, '/auth/facebook', class: 'btn btn-facebook'
     .col-md-6{style: 'text-align: center'}
-      = link_to "<i class='glyphicon glyphicon-pencil'></i> | Eu já possuo cadastro".html_safe, new_external_user_path, remote: true, class: 'btn btn-success'
+      = link_to "<i class='fa fa-google-plus'></i> | Cadastrar usando a conta Google".html_safe, '/auth/google_oauth2', class: 'btn btn-google-plus'
 
   %br/
   %hr/
