--- a/components/site/app/assets/stylesheets/site/custom.css
+++ b/components/site/app/assets/stylesheets/site/custom.css
@@ -5,6 +5,7 @@
 
 }
 
+
 .recent-properties .recent-properties-content .property-row .hentry .property-category {
   left: -22px !important;
   padding: 5px !important;
@@ -127,9 +128,11 @@ span.new_name{
 .recent-properties .recent-properties-content .property-row .hentry .property-category,
  .recent-properties .recent-properties-content .property-row .hentry .property-detail{
   display: block;
-opacity: 1;
-filter: alpha(opacity=100);
-visibility: visible;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  visibility: visible;
+  text-transform: none !important;
+  left: 0px !important;
 }
 
 .recent-properties .recent-properties-content .property-row .hentry{
