--- a/components/client/app/views/client/properties/_form.html.haml
+++ b/components/client/app/views/client/properties/_form.html.haml
@@ -46,8 +46,8 @@
     .col-md-4
       = f.input :reference_point, input_html: { placeholder: "Digite um ponto de referência"}
   .row
-    .col-md-2
-
+    .col-md-12
+      = f.input :project, input_html: { placeholder: "Digite o nome do empreendimento/condomínio"}
   %hr/
   .row
     .col-md-12
