--- a/components/client/app/views/client/passwords/_form.html.haml
+++ b/components/client/app/views/client/passwords/_form.html.haml
@@ -1,11 +1,11 @@
 = simple_form_for @user, url: update_password_path, method: :post do |f|
   .row
     .col-md-3
-      = f.input :password, input_html: {placeholder: 'Digite sua nova senha'}
+      = f.input :password, label: "Nova senha", input_html: {placeholder: 'Digite sua nova senha'}
     .col-md-3
-      = f.input :password_confirmation, input_html: {placeholder: 'Repita sua senha'}
+      = f.input :password_confirmation, label: "Repita a senha", input_html: {placeholder: 'Repita sua senha'}
     .col-md-3
-      = f.input :current_password, input_html: {placeholder: 'Digite sua senha atual'}
+      = f.input :current_password, label: "Senha atual", input_html: {placeholder: 'Digite sua senha atual'}
   %hr/
   .row
     .col-md-3
