--- a/components/site/app/views/site/properties/show.html.haml
+++ b/components/site/app/views/site/properties/show.html.haml
@@ -112,7 +112,7 @@
                       %span.col-xs-6.col-md-7.detail-field-value
                         %span.amount
                           = number_to_currency @property.value
-                    - if @property.lançamento?
+                    - if !@property.pronto?
                       %span.col-xs-6.col-md-5.detail-field-label Previsão de entrega
                       %span.col-xs-6.col-md-7.detail-field-value= @property.prediction.strftime('%d/%m/%Y') if @property.prediction.present?
                     %span.col-xs-6.col-md-5.detail-field-label Posição do sol
@@ -120,6 +120,9 @@
                     %span.col-xs-6.col-md-5.detail-field-label Tour
                     %span.col-xs-6.col-md-7.detail-field-value
                       %a{:href => "#{@property.block.tour_360}", :target => "_blank"} Confira Aqui
+                    - if @property.customer.present?
+                      %span.col-xs-6.col-md-5.detail-field-label Creci
+                      %span.col-xs-6.col-md-7.detail-field-value= @property.customer.creci
           / END FIND PROPERTY
           / START RECENT PROPERTY
           .block-sidebar.recent-property
