--- a/components/site/app/assets/stylesheets/site/custom.css
+++ b/components/site/app/assets/stylesheets/site/custom.css
@@ -1,3 +1,7 @@
+.property-fullwidth-excerpt {
+  font-size: 12px !important;
+}
+
 @media screen and (min-width: 992px) {
   .gsearch .gsearch-wrap .gsearch-content .gsearch-field .form-group {
     width: 20% !important;
