--- a/components/site/app/assets/stylesheets/site/custom.css
+++ b/components/site/app/assets/stylesheets/site/custom.css
@@ -7,6 +7,10 @@
 
 }
 
+.size {
+  font-size: 13px !important;
+}
+
 @media screen and (min-width: 992px) {
   .gsearch .gsearch-wrap .gsearch-content .gsearch-field .form-group {
     width: 20% !important;
