--- a/components/site/app/views/site/properties/show.html.haml
+++ b/components/site/app/views/site/properties/show.html.haml
@@ -37,7 +37,7 @@
                       - @property.images.order('order ASC').each do |image|
                         %li.thumb.selected{:style => "width: 138px;"}
 
-                          %img.img-responsive{:src => "#{image.image}", width: 100}
+                          %img.img-responsive{:src => "#{image.image}"}
                     - else
                       %li.thumb.selected{:style => "width: 138px;"}
                         %img.img-responsive{:src => "https://nwaqui.s3.amazonaws.com/uploads/real_evolution-fachada-185.jpg"}
