--- a/components/site/app/views/site/lists/index.html.haml
+++ b/components/site/app/views/site/lists/index.html.haml
@@ -45,8 +45,7 @@
                       .property-detail
                         .size
                           %span
-                            198.0
-                            M²
+                            = "#{special.property.area} M²"
                         .bedrooms
                           %span
                             4
