--- a/components/site/app/views/site/properties/search.html.haml
+++ b/components/site/app/views/site/properties/search.html.haml
@@ -45,7 +45,7 @@
                       .property-detail
                         .size
                           %span
-                            = "#{special.property.area} M²"
+                            = "#{property.area} M²"
                         .bedrooms
                           %span
                             4
