--- a/components/site/app/views/site/properties/show.html.haml
+++ b/components/site/app/views/site/properties/show.html.haml
@@ -7,7 +7,7 @@
         %article.property
           %h1.property-title
             %small
-              = link_to "Voltar para listagem", site.search_path, class: 'btn btn-primary'
+              = link_to "Voltar para listagem", site.root_path, class: 'btn btn-primary'
             %br/
             %small
               %p
