--- a/components/client/app/views/layouts/client/application.html.haml
+++ b/components/client/app/views/layouts/client/application.html.haml
@@ -9,7 +9,7 @@
   = render 'layouts/client/nav'
   .container
     = render 'layouts/client/flash_message'
-    .panel
+    %div{class: (@dashboard.nil?) ?  'panel' : ''}
       = yield
 
 #modal.modal.fade{"aria-labelledby" => "modal", :role => "dialog", :tabindex => "-1"}
