--- a/components/site/app/views/site/pages/show.html.haml
+++ b/components/site/app/views/site/pages/show.html.haml
@@ -8,7 +8,7 @@
         %b= @page.title
   %hr/
   .row
-    .col-md-12
+    .col-md-12{style: 'text-align: justify'}
       = @page.content.html_safe
       %br/
       %br/
