--- a/components/site/app/views/site/lists/index.html.haml
+++ b/components/site/app/views/site/lists/index.html.haml
@@ -37,7 +37,7 @@
                       %a{:href => "#{property_path(property)}", :title => "#{property.name}", :target => '_blank'}
                         = property.address_name
                         %span.pull-right
-                          %img{:alt => "", :src => "#{property.customer.logo_path.url}", :widht => "80", style: "border: 1px solid #D8D4D4;"}
+                          %img{:alt => "", :src => "#{property.customer.logo_path.url}", :width => "80", style: "border: 1px solid #D8D4D4;"}
                     .property-excerpt
                       %p
                         = property.description
