--- a/components/site/app/views/site/properties/show.html.haml
+++ b/components/site/app/views/site/properties/show.html.haml
@@ -14,8 +14,9 @@
                 %small
                   %p
                     %H4
-                      = star_fav(@property.id)
-                      = " #{@property.address_name} - " 
+                      %div{class: "starfav_#{@property.id}"}
+                        = star_fav(@property.id)
+                        = " #{@property.address_name} - " 
                       
                   %span.pull-right
                     
