--- a/components/client/app/views/client/property_images/_save.js.haml
+++ b/components/client/app/views/client/property_images/_save.js.haml
@@ -1,5 +1,4 @@
 - if @image.errors.any?
   $("#modal .modal-body").html("#{escape_javascript(render 'form')}")
 - else
-  $(".index-images").html("#{escape_javascript(render 'index')}")
-  $("#modal").modal('hide')
+  location.reload();
