--- a/components/site/app/views/site/pages/index.html.haml
+++ b/components/site/app/views/site/pages/index.html.haml
@@ -1,7 +1,7 @@
 .container
   .row
     .col-md-12
-      / area do banner
+      
   %br/
   %section
     .container
@@ -19,6 +19,7 @@
           %br/
           %br/
           %h3 Imóveis Destaques
+          %h3= touch_device? ? "true" : "false"
         .recent-properties-content
           %ul
             %li
