--- a/components/site/app/views/layouts/site/mobile.html.haml
+++ b/components/site/app/views/layouts/site/mobile.html.haml
@@ -2,8 +2,10 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
     %title NWaqui
     = stylesheet_link_tag 'site/application', media: 'all'
+    = stylesheet_link_tag 'site/mobile', media: 'all'
     %link{:href => "http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,400italic", :rel => "stylesheet", :type => "text/css"}/
 
     %script{:src => "http://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places", :type => "text/javascript"}
@@ -19,10 +21,10 @@
       ga('create', 'UA-75229662-1', 'auto');
       ga('send', 'pageview');
 
-  %body{class: (controller.action_name == 'show') ? 'page-right-sidebar' : 'home page-fullwidth' }
+  %body
     .site
-      = render 'layouts/site/desktop/header'
-      = render 'layouts/site/desktop/search'
+      = render 'layouts/site/mobile/header'
+      = render 'layouts/site/mobile/search'
       = yield
       = render 'layouts/site/desktop/footer'
     #modal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "modal", :role => "dialog", :tabindex => "-1", :style => 'z-index: 9999;'}
