--- a/components/site/app/views/site/properties/show.html.haml
+++ b/components/site/app/views/site/properties/show.html.haml
@@ -7,25 +7,18 @@
         %article.property
           .row
             .col-md-12
-              %h1.property-title
-                %small
-                  = link_to "Voltar para listagem", site.root_path, class: 'btn btn-primary'
-                %br/
-                %small
-                  %p
-                    %H4
-                      %div{class: "starfav_#{@property.id}"}
-                        = star_fav(@property.id)
-                      = " #{@property.address_name} - " 
-                      
-                  %span.pull-right
-                    
-                  %p
+              .row
+                .col-md-12
+                  %h1.property-title
+                    %small
+                    = link_to "Voltar para listagem", :back, class: 'btn btn-primary'
+              .row
+                .col-md-6
+                  %small
+                    %h4= " #{@property.address_name} " 
+                .col-md-6{style: 'margin-top: 10px'}
+                  %div{class: "starfav_#{@property.id} pull-right"}= star_fav(@property.id)
                 
-            .col-md-2.col-md-offset-2
-              
-
-
           .property-featured.clearfix
             .images
               .caroufredsel-wrap
@@ -76,11 +69,12 @@
                 .has
                   %i.fa.fa-check-circle
                   = attribute.name
-          .property-feature
-            %h4.property-feature-title Construção
-            .property-feature-content.clearfix
-              - @property.companies.each do |company|
-                = image_tag company.logo_path.url, size: '100x100' if company.logo_path.present?
+          - if @property.companies.count > 0 
+            .property-feature
+              %h4.property-feature-title Construção
+              .property-feature-content.clearfix
+                - @property.companies.each do |company|
+                  = image_tag company.logo_path.url, size: '100x100' if company.logo_path.present?
           .property-feature
             %h4.property-feature-title Venda
             .property-feature-content.clearfix
@@ -98,28 +92,38 @@
                   .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label Situação
                     %span.col-xs-6.col-md-7.detail-field-value= "#{@property.situation.humanize}"
+                  .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label Tipo
                     %span.col-xs-6.col-md-7.detail-field-value= @property.type_property.humanize
+                  .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label= @property.residencial? ? 'Unidade' : 'Loja' 
                     %span.col-xs-6.col-md-7.detail-field-value= @property.unit
+                  .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label Quartos
                     %span.col-xs-6.col-md-7.detail-field-value= @property.rooms
+                  .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label= @property.residencial? ? 'Suites' : 'Banheiros'
                     %span.col-xs-6.col-md-7.detail-field-value= @property.suit
+                  .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label Vagas
                     %span.col-xs-6.col-md-7.detail-field-value= @property.parking_spaces
+                  .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label Elevador
                     %span.col-xs-6.col-md-7.detail-field-value= @property.elevator ? 'Sim' : 'Não'
+                  .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label Andar
                     %span.col-xs-6.col-md-7.detail-field-value= (@property.floor == 0) ? "térreo" : "#{@property.floor} º"
+                  .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label Valor M²
                     %span.col-xs-6.col-md-7.detail-field-value= @property.value_m2
-                    - if @property.aluguel?
+                  - if @property.aluguel?
+                    .detail-field.row
                       %span.col-xs-6.col-md-5.detail-field-label Valor do Aluguel
                       %span.col-xs-6.col-md-7.detail-field-value
                         %span.amount
                           = number_to_currency @property.value_rent
-                    - else
+                  - else
+                    .detail-field.row
                       %span.col-xs-6.col-md-5.detail-field-label Valor
                       %span.col-xs-6.col-md-7.detail-field-value
                         %span.amount
@@ -127,18 +131,27 @@
                             Sob consulta
                           - else
                             = number_to_currency @property.value
-                    - if !@property.lançamento?
-                      %span.col-xs-6.col-md-5.detail-field-label Valor condomínio
-                      %span.col-xs-6.col-md-7.detail-field-value= number_to_currency @property.project_value
-                    - if !@property.pronto?
+                  - if !@property.lançamento?
+                    .detail-field.row
+                      %span.col-xs-6.col-md-5.detail-field-label Valor do condomínio
+                      %span.col-xs-6.col-md-7.detail-field-value
+                        - if @property.project_value.to_s.empty?
+                          Sob consulta
+                        - else
+                          = number_to_currency @property.project_value
+                  - if !@property.pronto?
+                    .detail-field.row
                       %span.col-xs-6.col-md-5.detail-field-label Previsão de entrega
                       %span.col-xs-6.col-md-7.detail-field-value= @property.prediction.strftime('%d/%m/%Y') if @property.prediction.present?
+                  .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label Posição do sol
                     %span.col-xs-6.col-md-7.detail-field-value= @property.sun_position
+                  .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label Tour
                     %span.col-xs-6.col-md-7.detail-field-value
                       %a{:href => "#{@property.block.tour_360}", :target => "_blank"} Confira Aqui
-                    - if @property.customer.present?
+                  - if @property.customer.present?
+                    .detail-field.row
                       %span.col-xs-6.col-md-5.detail-field-label Creci
                       %span.col-xs-6.col-md-7.detail-field-value= @property.customer.creci
           / END FIND PROPERTY
@@ -160,7 +173,7 @@
                         = "#{property.situation.humanize} - #{property.commercial_situation.humanize}"
                       %h4.featured-title
                         %a{:href => "#{property_path(property)}", :title => "Imóvel"}
-                          = "#{property.general_address} - Nº #{property.unit}"
+                          = "#{property.general_address} #{property.unit_formated}"
           / END RECENT PROPERTY
       / END SIDEBAR
 
