--- a/components/admin/app/views/layouts/admin/_nav.html.haml
+++ b/components/admin/app/views/layouts/admin/_nav.html.haml
@@ -18,7 +18,7 @@
             %span.caret
           %ul.dropdown-menu
             %li
-              %a{:href => "#{new_property_path}"} Novo imóveis
+              %a{:href => "#{new_property_path}"} Novo imóvel
             %li
               %a{:href => "#{properties_path}"} Imóveis
             %li.divider
