--- a/components/admin/app/views/admin/addresses/index.html.haml
+++ b/components/admin/app/views/admin/addresses/index.html.haml
@@ -15,6 +15,7 @@
             %th Cod.
             %th Nome
             %th Região
+            %th Domínio
             %th Ação
         %tbody.address-index
           = render 'index'
