--- a/components/admin/app/views/admin/region_scopes/_save.js.haml
+++ b/components/admin/app/views/admin/region_scopes/_save.js.haml
@@ -1,4 +1,4 @@
-- if @button.errors.any?
+- if @region.errors.any?
   $("#modal .modal-body").html("#{escape_javascript(render 'form')}")
 - else
   $("#modal").modal('hide')
