--- a/components/admin/app/views/admin/specials/index.html.haml
+++ b/components/admin/app/views/admin/specials/index.html.haml
@@ -18,6 +18,7 @@
             %td Ordem
             %td Nº Imóvel
             %td Endereço
+            %td Domínio
             %td Publicado?
             %td Ações
         %tbody.index-special
