--- a/components/admin/app/views/layouts/admin/_nav.html.haml
+++ b/components/admin/app/views/layouts/admin/_nav.html.haml
@@ -56,6 +56,9 @@
               %a{:href => "#{message_contacts_path}"} Contato mensagens
             %li
               %a{:href => "#{bookmark_contacts_path}"} Contato favoritos
+            %li.divider
+            %li
+              %a{:href => "#{region_scopes_path}"} Domínios
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
           %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
