--- a/components/admin/app/views/admin/addresses/_form.html.haml
+++ b/components/admin/app/views/admin/addresses/_form.html.haml
@@ -7,7 +7,7 @@
       = f.input :region, input_html: {placeholder: "digite uma região"}
   .row
     .col-md-12
-      = f.association :region_scope, include_blank: false
+      = f.association :region_scope, label: "Domínio", include_blank: false
   %hr/
   .row
     .col-md-12
