--- a/components/client/app/views/client/properties/index.html.haml
+++ b/components/client/app/views/client/properties/index.html.haml
@@ -35,7 +35,7 @@
           - @properties.each do |property|
             %tr
               %td.col-md-1= property.id
-              %td.col-md-1= property.address.name
+              %td.col-md-1= property.address.name if property.address.present?
               %td.col-md-2= property.general_address
               %td.col-md-2= property.situation.humanize
               %td.col-md-2= property.type_property.humanize
